fix table overflow in post

--- a/source/css/_post.styl
+++ b/source/css/_post.styl
@@ -24,9 +24,11 @@ color-border = #f3f3f3
         margin auto
 
     table
-        border-collapse: collapse;
-        margin: 25px 0;
-        font-size: 0.9em;
+        display block
+        overflow auto
+        border-collapse collapse
+        margin 25px 0
+        font-size 0.9em
         corner-radius 2em
         width 100%
           thead, tbody
